maintainIT2/src/objects/Meter__c.object
<CustomObject>
    <description>Meters</description>
    <fields>
        <fullName>Asset_Description__c</fullName>
        <description>Formula reference to the Asset ID to which the Logical Meter is associated</description>
        <formula>Maintenance_Asset__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to the Asset ID to which the Logical Meter is associated</inlineHelpText>
        <label>Asset Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMVAR__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Cumulative Value on the Meter at the time of the last meter replacement.  System populated via worklfow.  Field should be set to Read Only for all User Profiles.</description>
        <inlineHelpText>Cumulative Value on the Meter at the time of the last meter replacement.  System populated via worklfow.  Field should be set to Read Only for all User Profiles.</inlineHelpText>
        <label>Cumulative Meter Value at Replacement</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Reading_Num__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Meter Cumulative Reading Value (Numerical).  System populated via workflow.  Should be set to read only for all user profiles.</description>
        <inlineHelpText>Meter Cumulative Reading Value (Numerical).  System populated via workflow.  Should be set to read only for all user profiles.</inlineHelpText>
        <label>Cumulative Reading</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Meter Description.  User defined.</description>
        <inlineHelpText>Meter Description.  User defined.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Unique External Meter ID used to support importing meter readings from external systems.  External ID can be used to access record via API.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique External Meter ID used to support importing meter readings from external systems.  External ID can be used to access record via API.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Description__c</fullName>
        <description>Meter ID &amp; Description Concatenated for ease of Grouping on Reports</description>
        <formula>Name &amp; &quot; &quot; &amp;  Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Meter ID &amp; Description Concatenated for ease of Grouping on Reports</inlineHelpText>
        <label>ID &amp; Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <description>Meter Installation Date.  User defined.</description>
        <inlineHelpText>Meter Installation Date.  User defined.</inlineHelpText>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Reading_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Last Meter Reading Date/Time.  System populated via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Last Meter Reading Date/Time.  System populated via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Last Reading Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Reading_Value__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Last Reading - Numerical.  System populated via workflow.  Field security should be set to read only for all user profiles.</description>
        <inlineHelpText>Last Reading - Numerical.  System populated via workflow.  Field security should be set to read only for all user profiles.</inlineHelpText>
        <label>Last Reading Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Asset Tag.  User specified.</description>
        <inlineHelpText>Related Asset Tag.  User specified.</inlineHelpText>
        <label>Asset Tag</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Meters</relationshipLabel>
        <relationshipName>Meters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Meter Manufacturer.  Lookup for Accounts where Manufacturer = True</description>
        <inlineHelpText>Meter Manufacturer.  Lookup for Accounts where Manufacturer = True</inlineHelpText>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Manufacturer__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meters</relationshipLabel>
        <relationshipName>Meters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model Number for Meter</description>
        <inlineHelpText>Model Number for Meter</inlineHelpText>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Description__c</fullName>
        <description>Obsolete as of Ver 1.7</description>
        <formula>Parent_Meter__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Obsolete as of Ver 1.7</inlineHelpText>
        <label>Obsolete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Meter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Obsolete as of Ver 1.7</description>
        <inlineHelpText>Obsolete as of Ver 1.7</inlineHelpText>
        <label>Obsolete</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Meter__c.Type__c</field>
                <operation>equals</operation>
                <value>Continuous</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Meter__c</referenceTo>
        <relationshipLabel>Child Meters &amp; Related Assets</relationshipLabel>
        <relationshipName>Child_Meters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Meter Revision.  User specified.</description>
        <inlineHelpText>Meter Revision.  User specified.</inlineHelpText>
        <label>Revision</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <description>Serial Number for Meter.  User specified.</description>
        <inlineHelpText>Serial Number for Meter.  User specified.</inlineHelpText>
        <label>Serial #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Meter Type - Only &quot;Continuous&quot; can be used on PM Schedules - DO NOT EDIT VALUES IN THIS LIST.  Unexpected Results will occur.  System populated via workflow.  Field security should be set to read only for all user profiles.</description>
        <inlineHelpText>Meter Type - Only &quot;Continuous&quot; can be used on PM Schedules - DO NOT EDIT VALUES IN THIS LIST.  Unexpected Results will occur.  System populated via workflow.  Field security should be set to read only for all user profiles.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Continuous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gauge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>Meter Unit of Measure - User Specified.</description>
        <inlineHelpText>Meter Unit of Measure - User Specified.</inlineHelpText>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cycles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degrees F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litres</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>UOM__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Meter ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meters</pluralLabel>
    <recordTypes>
        <fullName>Attribute</fullName>
        <active>false</active>
        <description>Attribute</description>
        <label>Attribute</label>
    </recordTypes>
    <recordTypes>
        <fullName>Continuous</fullName>
        <active>true</active>
        <description>Continuous Meter (Odometer, Hour Meters, etc).  Meter readings continuously increase in value</description>
        <label>Continuous</label>
    </recordTypes>
    <recordTypes>
        <fullName>Counter</fullName>
        <active>true</active>
        <description>Counter Meter Type resets to zero each time it is read (Production Unit Counter, Fuel Consumption, etc)</description>
        <label>Counter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gauge</fullName>
        <active>false</active>
        <description>Gauge</description>
        <label>Gauge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Logical</fullName>
        <active>false</active>
        <description>Logical</description>
        <label>Logical</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Asset_Required_on_Logical</fullName>
        <active>false</active>
        <description>Obsolete as of Ver 1.7</description>
        <errorConditionFormula>IF(  ISPICKVAL ( Type__c , &quot;Logical&quot;),   ISBLANK(  Maintenance_Asset__c  )  , false)</errorConditionFormula>
        <errorDisplayField>Maintenance_Asset__c</errorDisplayField>
        <errorMessage>An Asset ID must be Provided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Required_on_Logical</fullName>
        <active>false</active>
        <description>Obsolete as of Ver 1.7</description>
        <errorConditionFormula>IF(  ISPICKVAL ( Type__c , &quot;Logical&quot;),   ISBLANK( Parent_Meter__c )  , false)</errorConditionFormula>
        <errorDisplayField>Parent_Meter__c</errorDisplayField>
        <errorMessage>A Parent Meter ID must be provided</errorMessage>
    </validationRules>
</CustomObject>